Added queries and preloader

--- a/src/components/MainContent/MainContent.css
+++ b/src/components/MainContent/MainContent.css
@@ -11,6 +11,11 @@
 .pizza-block__image {
     width: 260px
 }
+.button--add {
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
 
 .pizza-block__title {
     font-size: 20px;
