--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,34 @@
+@media (max-width: 1300px) {
+    /* .sort{
+        display: none;
+    } */
+
+}
+
+@media (max-width:1024px) {
+    .categories {
+        display: none;
+    }
+    .burger-menu{
+        display: block !important;
+    }
+}
+
+.burger-menu {
+    display: none;
+    cursor: pointer;
+}
+
+.bar {
+    width: 25px;
+    height: 3px;
+    background-color: #333;
+    margin: 5px 0;
+}
+
+
+
+
 b{cursor: pointer;}
 .popUpButton{
     background-color:transparent;
@@ -199,3 +230,6 @@ b{cursor: pointer;}
     font-weight: bold;
     color: #fe5f1e
 }
+
+
+
