--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,34 +1,59 @@
-@media (max-width: 1300px) {
-    /* .sort{
-        display: none;
-    } */
-
-}
-
-@media (max-width:1024px) {
-    .categories {
+@media (max-width:1300px){
+    .categories{
         display: none;
     }
+
     .burger-menu{
         display: block !important;
     }
+
+    .content__top{
+        position: relative;
+    }
+
+    .categories ul{
+        display: block !important;
+        position: absolute;
+        left: 0px;
+        top: 30px;
+        border:1px solid black;
+        background-color:#838282;
+        width: 100%;    
+                
+    }
+    .categories li{
+        margin: 5px !important;
+       
+    }
+    
 }
 
-.burger-menu {
+@media (max-width:1024px){
+    .burgerIcon{
+        display: block !important;
+    }
+    .sort{
+        display: none;
+    }
+}
+
+.active{
+    display: block;
+}
+
+.burger-menu{
     display: none;
-    cursor: pointer;
+}
+.burgerIcon{
+    display: none;
 }
 
-.bar {
-    width: 25px;
-    height: 3px;
-    background-color: #333;
-    margin: 5px 0;
+/* .visible{
+    display: block;
 }
-
-
-
-
+.hidden{
+    display: none;
+} */
 b{cursor: pointer;}
 .popUpButton{
     background-color:transparent;
