--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,6 +12,7 @@
         position: relative;
         border:1px solid black;
         background-color:#838282;
+        margin-bottom: 25px;
                 
     }
     .categories li{
@@ -20,6 +21,7 @@
     }
     .sort{
         display: none;
+        position: relative;
     }
     .burgerIcon{
         display: block !important;
@@ -27,12 +29,12 @@
     }
     .sort__label{
         position: absolute;
-        top: 0;
         right: 0;
     }
     .content__top{
         display:block !important;
     }
+    
    
     
 }
