--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,3 +1,67 @@
+@media (max-width:920px) {
+    .cart__item-info h3 {
+        font-size: 15px !important;
+    }
+
+    .cart__item-info p {
+        font-size: 12px !important;
+    }
+
+    .cart__item-price {
+        padding-top: 20px;
+    }
+
+    .cart__item-remove {
+        padding-top: 20px;
+    }
+}
+
+@media (max-width:520px) {
+    .cart__item {
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .cart__item-price {
+        width: 15%;
+    }
+
+    .cart__top {
+        display: block !important;
+        width: 100%;
+        text-align: center;
+    }
+    .cart__clear{
+        margin-top: 10px;
+        justify-content: center;
+    }
+    .content__title{
+        justify-content: center;
+    }
+
+    .cart__bottom-details {
+        display: flex;
+        justify-content: center !important;
+    }
+
+    .firstSpan {
+        display: none !important;
+    }
+
+    .cart__bottom-buttons {
+        display: block !important;
+    }
+
+    .button span {
+        font-size: 12px !important;
+    }
+
+    .cart__bottom-buttons .pay-btn {
+        margin-top: 15px;
+    }
+}
+
 .container--cart {
     max-width: 820px;
     margin: 40px auto
@@ -5,7 +69,7 @@
 
 .container--cart .content__title {
     margin: 0;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .cart__top {
@@ -97,8 +161,6 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    margin-right: 15px;
-    width: 10%
 }
 
 .cart__item-img img {
@@ -182,7 +244,7 @@
     -webkit-box-pack: end;
     -ms-flex-pack: end;
     justify-content: flex-end;
-    width: 4%
+    width: 14%
 }
 
 .cart__item-remove .button {
@@ -251,7 +313,6 @@
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    width: 210px;
     border-color: #ddd
 }
 
@@ -282,7 +343,7 @@
 .cart__bottom-buttons .pay-btn {
     font-size: 16px;
     font-weight: 600;
-    width: 210px;
+    width: 100%;
     padding: 16px
 }
 
