--- a/src/components/MainContent/MainContent.css
+++ b/src/components/MainContent/MainContent.css
@@ -1,3 +1,5 @@
+
+
 .pizza-block {
     width: 280px;
     text-align: center;
@@ -9,7 +11,10 @@
 }
 
 .pizza-block__image {
-    width: 260px
+    width: 260px;
+    margin-right: 15px;
+    background-size: auto;
+
 }
 .button--add {
     display: flex;
