--- a/src/App.css
+++ b/src/App.css
@@ -287,7 +287,7 @@ body {
 
 .wrapper {
     width: calc(100vw - 45px);
-    height: 100%;
+    /* height: 100%; */
     background-color: #fff;
     margin: 50px auto;
     border-radius: 10px;
