--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -1,53 +1,53 @@
+.loader-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
 .loader {
-    position: absolute;
-    top: 50%;
-    left: 45%;
-    width: 150px;
-    height: 150px;
-    border: 2px solid #eae4ea;
-    box-shadow: 0 -2px 2px rgba(0,0,0,.2);
-    border-bottom: 2px solid #6ddfca;
-    border-radius: 50%;
-    animation: loader 3s linear infinite;
+  width: 150px;
+  height: 150px;
+  border: 2px solid #eae4ea;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.loader:before,
+.loader:after {
+  content: '';
+  position: absolute;
+  border: 2px solid #eae4ea;
+  box-shadow: 0 -2px 2px rgba(0, 0, 0, .2);
+  border-radius: 50%;
+}
+
+.loader:before {
+  top: 10px;
+  left: 10px;
+  bottom: 10px;
+  right: 10px;
+  border-bottom: 2px solid #d355be;
+  animation: loader 2s linear infinite;
+}
+
+.loader:after {
+  top: 22px;
+  left: 22px;
+  bottom: 22px;
+  right: 22px;
+  border-bottom: 2px solid #8c23ec;
+  animation: loader 1s linear infinite;
+}
+
+@keyframes loader {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  .loader:before {
-    content: '';
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    bottom: 10px;
-    right: 10px;
-    border: 2px solid #eae4ea;
-    box-shadow: 0 -2px 2px rgba(0,0,0,.2);
-    border-bottom: 2px solid #d355be;
-    border-radius: 50%;
-    animation: loader 2s linear infinite;
+  100% {
+    transform: rotate(360deg);
   }
-  
-  .loader:after {
-    content: '';
-    position: absolute;
-    top: 22px;
-    left: 22px;
-    bottom: 22px;
-    right: 22px;
-    border: 2px solid #eae4ea;
-    box-shadow: 0 -2px 2px rgba(0,0,0,.2);
-    border-bottom: 2px solid #8c23ec;
-    border-radius: 50%;
-    animation: loader 1s linear infinite;
-  }
-  
-  @keyframes loader
-  {
-    0%
-    {
-      transform: rotate(0deg);
-    }
-    100%
-    {
-      transform: rotate(360deg);
-    }
-    
-  }
+}
