--- a/src/components/MainContent/MainContent.css
+++ b/src/components/MainContent/MainContent.css
@@ -1,9 +1,13 @@
-
+.pizza-block__item{
+    margin-left: 5px;
+    margin-right: 5px;
+}
 
 .pizza-block {
     width: 280px;
     text-align: center;
-    margin-bottom: 65px
+    margin-bottom: 65px;
+    
 }
 
 .pizza-block:not(:nth-of-type(4n)) {
@@ -12,7 +16,6 @@
 
 .pizza-block__image {
     width: 260px;
-    margin-right: 15px;
     background-size: auto;
 
 }
