--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,8 +10,9 @@
     .categories ul{
         display: block !important;
         position: relative;
-        border:1px solid black;
-        background-color:#838282;
+        border:1px solid rgb(182, 182, 73);
+        background-color:#f1a26c8a;
+        border-radius:10px;
         margin-bottom: 25px;
                 
     }
@@ -30,6 +31,9 @@
     .sort__label{
         position: absolute;
         right: 0;
+    }
+    .sort__label b{
+        font-size: 12px !important;
     }
     .content__top{
         display:block !important;
