--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,36 @@
         display: block !important ;
     }
 }
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-10px);
+    }
+    60% {
+        transform: translateX(-50px);
+    }
+}
+
+@keyframes rotate360 {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.header__logo img{
+    animation:rotate360 10s linear infinite;
+}
+
+
+.animated-text  {
+    display: inline-block;
+    animation: bounce 3s infinite;
+}
 
 .name{
     display: none;
